@startuml

title __ORGANIZATION's Class Diagram__\n

  package  {
    package servlets.Organization {
      class EditOrganizationServlet {
          # doPost()
          # doGet()
      }
    }
  }
  

  package  {
    package servlets.Organization {
      class OrganizationServlet {
          {static} - serialVersionUID : long
          # service()
          - verification()
      }
    }
  }
  

  EditOrganizationServlet -up-|> HttpServlet
  OrganizationServlet -up-|> HttpServlet


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
